--- a/docs/wdd130/styles/styles.css
+++ b/docs/wdd130/styles/styles.css
@@ -257,7 +257,7 @@ label {
 
 /*Know about us section*/
 .school{
-    background-image: url("/wdd130/images/back3.jpg");
+    background-image: url("../images/back3.jpg");
     background-color: rgba(0, 0, 0, 0.12); 
     background-blend-mode: multiply;
     margin-top: -147px;
@@ -347,7 +347,7 @@ label {
     margin-top: -40px;
     padding-top: 40px;
     gap: 10px;
-    background-image: url(/wdd130/images/back32.jpg);
+    background-image: url(../wdd130/images/back32.jpg);
     background-position: 100;
     background-color: rgba(0, 0, 0, 0.12); 
     background-blend-mode: multiply;
@@ -421,7 +421,7 @@ label {
 .programs{
     display: grid;
     grid-template-columns: repeat(10, 10%);
-    background-image: url(/wdd130/images/back4.jpg);
+    background-image: url(../wdd130/images/back4.jpg);
     background-size: cover;
     background-color: rgba(0, 0, 0, 0.01); 
     background-blend-mode: multiply;
