--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -54,6 +54,9 @@ nav {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     height: 60px;
     padding: 20px 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     
 }
 
